<resources>
    <string name="app_name">Temple Trip Planner</string>
    <string name="action_settings">Settings</string>
    <string name="arrival_date">Arrival date</string>
    <string name="title_selectArrivalDate">Select arrival date</string>
    <string name="hint_leavingDate">Leaving date</string>
    <string name="title_selectLeavingDate">Select Leaving Date</string>
    <string name="email_templeHostel" translatable="false">freib-hos@ldschurch.org</string>
    <string name="subject_reservationEmail" translatable="false">Reservation from %1$s to %2$s for %3$s</string>
    <string name="body_emailReservation" translatable="false">Dear Hostel,\n\nI would like to reserve for %4$s from %1$s to %2$s.\nHere are the names:\n%5$s\n\nKind regards,\n%3$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name in e-mail signature</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="input_firstname_lastname_hint">Firstname Lastname</string>
    <string name="input_prefill" translatable="false"/>
    <string name="dialog_title_display_name">Setup Name</string>
    <string name="dialog_content_display_name">Please enter your name as you would like to use in e-mail signature</string>
    <string name="patronKind_child">Child price (less than 8 years old)</string>
    <string name="patronKind_adult">Adult price (greater than or equal to 8 years old)</string>
    <string name="patronKind_templeWorker">Temple worker</string>
    <string name="patronList_addNewPatron">Add new patron...</string>
    <string name="description_addNewPatron">To add new patron please click here.</string>

    <string name="toast_please_fill_the_form_properly">Please fill the form properly!</string>
    <string name="emailPatronKind_child" translatable="false">(child)</string>
    <string name="emailPatronKind_adult" translatable="false">(adult or more than 8 years old)</string>
    <string name="emailPatronKind_templeWorker" translatable="false">(Temple Worker)</string>
    <string name="patronLine" translatable="false">* %1$s %2$s</string>
    <string name="trip_nights_cost_prepay_text">%1$s: %2$6.2f€\n(%3$6.2f€ for reservation)</string>
    <string name="dash">-</string>
    <plurals name="numberOfPersons">
        <item quantity="one">one person</item>
        <item quantity="other">%d persons</item>
    </plurals>
    <plurals name="numberOfNights">
        <item quantity="one">%d night</item>
        <item quantity="other">%d nights</item>
    </plurals>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_temple_trip">New Temple Trip</string>
    <string name="find_seats">Find Seats</string>
    <string name="my_temple_trips">My Temple Trips</string>
    <string name="toast_name_must_be_set">Please set your name in Settings before send e-mail to hostel.</string>
</resources>
