<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/content_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.babcsany.templetripplanner.fragments.MainActivityFragment"
                tools:showIn="@layout/app_bar_main">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_alignParentTop="true"
            android:id="@+id/editTextArrivalDate"
            android:hint="@string/arrival_date"
            android:layout_centerHorizontal="false"
            android:layout_alignParentStart="true"
            android:minEms="5"
            android:focusable="false"/>

    <TextView
            android:text="@string/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextArrivalDate"
            android:layout_toEndOf="@+id/editTextArrivalDate"
            android:id="@+id/textViewDash"
            android:layout_alignTop="@+id/editTextArrivalDate"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@+id/editTextArrivalDate"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:layout_alignBottom="@+id/editTextArrivalDate"
            android:layout_toEndOf="@+id/textViewDash"
            android:id="@+id/editTextLeavingDate"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:hint="@string/hint_leavingDate"
            android:focusable="false"/>

    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/costOfHostel"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editTextArrivalDate"
            android:layout_above="@id/costOfHostel"
            android:layout_alignParentStart="true"
            android:id="@+id/patronsListView"
            android:scrollbars="vertical"
            android:footerDividersEnabled="true" />

</RelativeLayout>
